Fixed missing background

--- a/public_html/resources/styles/styles.css
+++ b/public_html/resources/styles/styles.css
@@ -63,41 +63,39 @@
 	}
 }
 
+#topbar, #leftbar, #rightbar, $bottombar
+{
+	background-color: $(dark-gray);
+	position: fixed;
+	z-index: 5;
+}
 #topbar
 {
-	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
 	height: 50px;
-	z-index: 5;
 }
 #leftbar
 {
-	position: fixed;
 	top: 0;
 	left: 0;
 	bottom: 0;
 	width: 50px;
-	z-index: 5;
 }
 #rightbar
 {
-	position: fixed;
 	top: 0;
 	right: 0;
 	bottom: 0;
 	width: 50px;
-	z-index: 5;
 }
 #bottombar
 {
-	position: fixed;
 	bottom: 0;
 	left: 0;
 	right: 0;
 	height: 50px;
-	z-index: 5;
 }
 
 body
